--- a/style.less
+++ b/style.less
@@ -4,11 +4,13 @@ body {
   flex-direction: column;
   align-items: center;
 }
+
 div {
   width: 500px;
   height: 300px;
   background-color: white;
   border: 1px solid black;
   margin: 10px;
-  transition: none ease-in-out .3s;
+  position: relative;
+  opacity: 0;
 }
