Transfer phrases (but not drawings) from one player to the next

--- a/style.less
+++ b/style.less
@@ -5,9 +5,9 @@ body {
   align-items: center;
 }
 
-div {
-  width: 500px;
-  height: 300px;
+#previous, #next {
+  width: 250px;
+  height: 150px;
   margin: 10px;
   position: relative;
   opacity: 0;
@@ -26,4 +26,8 @@ div {
     border: none;
     background: none;
   }
+}
+
+#instructions {
+  font-size: 2em;
 }
