--- a/style.less
+++ b/style.less
@@ -6,20 +6,22 @@ body {
 }
 
 #previous, #next {
-  width: 250px;
-  height: 150px;
+  //width: 250px;
+  //height: 150px;
+  width: 500px;
+  height: 300px;
   margin: 10px;
   position: relative;
   opacity: 0;
   text-align: center;
 
-  span, canvas, textarea {
+  span, div, textarea, img {
     width: 100%;
     height: 100%;
     font-size: 2em;
     background-color: white;
     border: 1px solid black;
-    display: none;
+    display: block;
   }
 
   #initial {
