--- a/style.less
+++ b/style.less
@@ -15,7 +15,7 @@ body {
   opacity: 0;
   text-align: center;
 
-  span, div, textarea, img {
+  > span, > div, > textarea, > img {
     width: 100%;
     height: 100%;
     font-size: 2em;
