--- a/style.less
+++ b/style.less
@@ -6,8 +6,6 @@ body {
 }
 
 #previous, #next {
-  //width: 250px;
-  //height: 150px;
   width: 500px;
   height: 300px;
   margin: 10px;
@@ -23,13 +21,22 @@ body {
     border: 1px solid black;
     display: block;
   }
-
-  #initial {
-    border: none;
-    background: none;
-  }
 }
 
 #instructions {
   font-size: 2em;
+}
+
+.chain {
+  img {
+    background-color: white;
+    border: 1px solid black;
+  }
+  div {
+    font-size: 2em;
+    background-color: white;
+    height: 300px;
+    border: 1px solid black;
+    text-align: center;
+  }
 }
