--- a/style.less
+++ b/style.less
@@ -28,6 +28,14 @@ body {
 }
 
 .chain {
+  border-top: 2px solid black;
+  margin-top: 20px;
+  padding: 50px;
+
+  &:first-of-type {
+    border: none;
+    padding-top: 0;
+  }
   img {
     background-color: white;
     border: 1px solid black;
