Display players as they join

--- a/style.less
+++ b/style.less
@@ -48,3 +48,20 @@ body {
     text-align: center;
   }
 }
+
+div#sharelink {
+  font-size: small;
+}
+div#player-container {
+  border: 1px solid black;
+  margin: 20px;
+  padding: 10px;
+}
+a#join, a#start {
+  font-size: x-large;
+  padding: 10px;
+  border: 1px solid black;
+}
+div#players {
+  white-space: pre-line;
+}
