--- a/style.less
+++ b/style.less
@@ -44,6 +44,7 @@ body {
     font-size: 2em;
     background-color: white;
     height: 300px;
+    width: 500px;
     border: 1px solid black;
     text-align: center;
   }
