--- a/style.less
+++ b/style.less
@@ -27,26 +27,38 @@ body {
   font-size: 2em;
 }
 
-.chain {
-  border-top: 2px solid black;
-  margin-top: 20px;
-  padding: 50px;
+.reveal {
+  background-color: #ffebc2;
 
-  &:first-of-type {
-    border: none;
-    padding-top: 0;
+  .content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    h1 {
+      font-size: 3em;
+    }
+
+    .text {
+      font-size: 2em;
+      height: 300px;
+      width: 500px;
+      text-align: center;
+    }
+
+    .text, img {
+      background-color: white;
+      border: 1px solid black;
+      margin-top: 20px;
+    }
   }
-  img {
-    background-color: white;
-    border: 1px solid black;
-  }
-  div {
-    font-size: 2em;
-    background-color: white;
-    height: 300px;
-    width: 500px;
-    border: 1px solid black;
-    text-align: center;
+
+  .final .content {
+    flex-direction: row;
+
+    > div {
+      margin: 10px;
+    }
   }
 }
 
