Landing page and k8s files

--- a/style.less
+++ b/style.less
@@ -70,11 +70,14 @@ div#player-container {
   margin: 20px;
   padding: 10px;
 }
-a#join, a#start {
+a#join, a#start, a#new {
   font-size: x-large;
   padding: 10px;
   border: 1px solid black;
 }
 div#players {
   white-space: pre-line;
+}
+img#treeofboobs {
+  width: 400px;
 }
