--- a/style.less
+++ b/style.less
@@ -29,22 +29,42 @@ body {
 
 .archive {
   .chain-header {
+    width: 1100px;
+    height: 100%;
+
     h1 {
-      width: 500px;
+      width: 100%;
       text-align: center;
     }
   }
 
   > div {
     position: fixed;
+    background-color: #ffebc2;
+    margin-top: -5px;
+    padding-top: 5px;
+  }
 
-    h1 {
-      font-size: 3em;
-    }
+  .player-name {
+    background-color: white;
+    border-bottom: none;
+    border: 1px solid black;
+    display: inline;
+    margin: 0;
+    padding: 1px 5px 0px 5px;
+  }
+
+  img {
+    display: block;
   }
 
   .start-and-end {
     display: flex;
+    width: 1100px;
+
+    > div {
+      margin: auto;
+    }
   }
 
   .card-content {
@@ -54,7 +74,6 @@ body {
     text-align: center;
     background-color: white;
     border: 1px solid black;
-    margin-top: 20px;
   }
 }
 
